--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,101 @@
 <!DOCTYPE html>
-<body lang="ru">
+<html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cognitive Biases</title>
-
-    <link rel="stylesheet" href="styles/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Cognitive Biases</title>
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Neucha:regular" rel="stylesheet" />
+  <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
 
+<body>
+  <div class="wrapper">
+    <header class="header background">
+      <div class="container header-container">
+        <div class="header-wrap">
+          <h1><span class="orange-text">Когнитивные<br>искажения<br></span>в программировании</h1>
+          <img src="./images/main.png" alt="">
+        </div>
+
+        <div class="text-wrap">
+          <p>Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы
+            часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с
+            ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+          <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере
+            продуктивности, багам и бесконечному разочарованию.</p>
+          <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл,
+            а остатки нейтрализовать.</p>
+          <button class="btn btn-hero"><a href="">Подробнее</a></button>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+      <section class="section">
+        <div class="container">
+          <h2>Что же это такое,<span> когнитивные искажения?</span></h2>
+          <p>Что такое когнитивные искажения. Petrovna Channel</p>
+          <video src=""></video>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <nav>
+            <h2><span>5 когнитивных искажений</span> о существовании которых стоит помнить</h2>
+            <div class="card">
+              <span>1</span>
+              <h3>Эффект ИКЕА</h3>
+              <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+            </div>
+            <div class="card">
+              <span>2</span>
+              <h3>Преждевременная оптимизация</h3>
+              <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+            </div>
+            <div class="card">
+              <span>3</span>
+              <h3>Искажение новизны</h3>
+              <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.
+              </p>
+            </div>
+            <div class="card">
+              <span>4</span>
+              <h3>Гиперболическое обесценивание</h3>
+              <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но
+                доступную в будущем.</p>
+            </div>
+            <div class="card">
+              <span>5</span>
+              <h3>Ошибка планирования</h3>
+              <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
+            </div>
+          </nav>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container"></div>
+      </section>
+      <section class="section">
+        <div class="container"></div>
+      </section>
+      <section class="section">
+        <div class="container"></div>
+      </section>
+      <section class="section">
+        <div class="container"></div>
+      </section>
+      <section class="section">
+        <div class="container"></div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container"></div>
+    </footer>
+  </div>
 </body>
+
 </html>
