feat: implement step 4

--- a/src/index.html
+++ b/src/index.html
@@ -34,15 +34,17 @@
         </div>
       </div>
     </header>
+
     <main class="main">
       <section class="section">
-        <div class="container">
-          <h2>Что же это такое,<span> когнитивные искажения?</span></h2>
-          <p>Что такое когнитивные искажения. Petrovna Channel</p>
-          <video src=""></video>
+        <div class="container video-section">
+          <h2>Что же это такое,<br><span class="orange-text"> когнитивные искажения?</span></h2>
+          <p class="text">Что такое когнитивные искажения. Petrovna Channel</p>
+          <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
         </div>
       </section>
-      <section class="section">
+
+      <section class="section nav-section">
         <div class="container">
           <nav>
             <h2><span>5 когнитивных искажений</span> о существовании которых стоит помнить</h2>
