feat: implement step 5

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             продуктивности, багам и бесконечному разочарованию.</p>
           <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл,
             а остатки нейтрализовать.</p>
-          <button class="btn btn-hero"><a href="">Подробнее</a></button>
+          <button class="btn btn-hero"><a href="#navigation">Подробнее</a></button>
         </div>
       </div>
     </header>
@@ -44,40 +44,63 @@
         </div>
       </section>
 
-      <section class="section nav-section">
+      <section class="section nav-section" id="navigation">
         <div class="container">
-          <nav>
-            <h2><span>5 когнитивных искажений</span> о существовании которых стоит помнить</h2>
-            <div class="card">
-              <span>1</span>
-              <h3>Эффект ИКЕА</h3>
-              <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+          <nav class="nav-container">
+            <div class="first-row">
+              <div class="card">
+                <h2><span class="orange-text">5 когнитивных искажений</span><br> о существовании которых стоит помнить</h2>
+              </div>
+
+              <div class="card">
+                <a href="">
+                  <span>1</span>
+                  <h3>Эффект ИКЕА</h3>
+                  <p class="text">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+                </a>
+              </div>
+
+              <div class="card">
+                <a href="">
+                  <span>2</span>
+                  <h3>Преждевременная оптимизация</h3>
+                  <p class="text">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+                </a>
+              </div>
             </div>
-            <div class="card">
-              <span>2</span>
-              <h3>Преждевременная оптимизация</h3>
-              <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
-            </div>
-            <div class="card">
-              <span>3</span>
-              <h3>Искажение новизны</h3>
-              <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.
-              </p>
-            </div>
-            <div class="card">
-              <span>4</span>
-              <h3>Гиперболическое обесценивание</h3>
-              <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но
-                доступную в будущем.</p>
-            </div>
-            <div class="card">
-              <span>5</span>
-              <h3>Ошибка планирования</h3>
-              <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
+
+            <div class="second-row">
+              <div class="card card-2">
+                <a href="">
+                  <span>3</span>
+                  <h3>Искажение новизны</h3>
+                  <p class="text">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.
+                  </p>
+                </a>
+              </div>
+
+              <div class="card card-2">
+                <a href="">
+                  <span>4</span>
+                  <h3>Гиперболическое обесценивание</h3>
+                  <p class="text">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но
+                    доступную в будущем.</p>
+                </a>
+              </div>
+
+              <div class="card card-2">
+                <a href="">
+                  <span>5</span>
+                  <h3>Ошибка планирования</h3>
+                  <p class="text">Неправильно рассчитывать время необходимое для завершения задачи.</p>
+                </a>
+              </div>
             </div>
           </nav>
         </div>
+
       </section>
+
       <section class="section">
         <div class="container"></div>
       </section>
