--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         <div class="container video-section">
           <h2>Что же это такое,<br><span class="orange-text"> когнитивные искажения?</span></h2>
           <p class="text">Что такое когнитивные искажения. Petrovna Channel</p>
-          <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video shadow" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -101,8 +101,26 @@
 
       </section>
 
-      <section class="section">
-        <div class="container"></div>
+      <section class="section ikea-effect" id="ikea-effect">
+        <div class="container">
+          <div class="wrap">
+            <img src="./images/1.png" alt="" class="shadow">
+            <div class="section-header">
+              <p class="upper-text">Когнитивные искажения</p>
+              <h2>Эффект ИКЕА</h2>
+              <p class="low-text">Вы переоцениваете собственные<br> решения, и, как следствие,<br> недооцениваете решения других.</p>
+            </div>
+          </div>
+
+          <h3 class="article-header">Как проявляется</h3>
+
+          <div class="text-wrap">
+            <p class="text">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
+            <p class="text">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+          </div>
+
+
+        </div>
       </section>
       <section class="section">
         <div class="container"></div>
