--- a/src/index.html
+++ b/src/index.html
@@ -51,22 +51,17 @@
               <div class="card">
                 <h2><span class="orange-text">5 когнитивных искажений</span><br> о существовании которых стоит помнить</h2>
               </div>
-
               <a href="#ikea-effect" class="card">
                 <span>1</span>
                 <h3>Эффект ИКЕА</h3>
                 <p class="text">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
               </a>
-
-
-
               <a href="#premature-optimization" class="card">
                 <span>2</span>
                 <h3>Преждевременная оптимизация</h3>
                 <p class="text">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
               </a>
             </div>
-
             <div class="second-row">
               <a href="#" class="card card-2">
                 <span>3</span>
@@ -130,9 +125,28 @@
           </div>
         </div>
       </section>
-      <section class="section">
-        <div class="container"></div>
+
+      <section class="section content" id="distortion-of-novelty">
+        <div class="container">
+          <div class="wrap">
+            <img src="./images/3.png" alt="" class="shadow">
+            <div class="section-header">
+              <p class="upper-text">Когнитивные искажения</p>
+              <h2>Искажение новизны</h2>
+              <p class="low-text">Вы даёте более высокую оценку тем<br> событиям, которые произошли<br> недавно, и недооцениваете более<br> старые.</p>
+            </div>
+          </div>
+
+          <h3 class="article-header">Как проявляется</h3>
+
+          <div class="text-wrap">
+            <p class="text">Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
+            <p class="text">Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
+          </div>
+        </div>
       </section>
+
+
       <section class="section">
         <div class="container"></div>
       </section>
