feat: implement step 9

--- a/src/index.html
+++ b/src/index.html
@@ -146,10 +146,29 @@
         </div>
       </section>
 
+      <section class="section content" id="hyperbolic-depreciation">
+        <div class="container">
+          <div class="wrap">
+            <img src="./images/4.png" alt="" class="shadow">
+            <div class="section-header">
+              <p class="upper-text">Когнитивные искажения</p>
+              <h2>Гиперболическое обесценивание</h2>
+              <p class="low-text">Вы гонитесь за немедленной<br> маленькой выгодой и игнорируете<br> более крупную, недоступную сейчас,<br>но доступную в будущем.</p>
+            </div>
+          </div>
 
-      <section class="section">
-        <div class="container"></div>
+          <h3 class="article-header">Как проявляется</h3>
+
+          <div class="text-wrap">
+            <p class="text">Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
+            <p class="text">Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
+          </div>
+        </div>
       </section>
+
+
+
+
       <section class="section">
         <div class="container"></div>
       </section>
