--- a/src/index.html
+++ b/src/index.html
@@ -166,12 +166,32 @@
         </div>
       </section>
 
+      <section class="section content" id="errors-in-planning">
+        <div class="container">
+          <div class="wrap">
+            <img src="./images/5.png" alt="" class="shadow">
+            <div class="section-header">
+              <p class="upper-text">Когнитивные искажения</p>
+              <h2>Ошибка&nbsp;планирования</h2>
+              <p class="low-text">Неправильно рассчитывать время<br>необходимое для завершения задачи.</p>
+            </div>
+          </div>
 
+          <h3 class="article-header">Как проявляется</h3>
 
-
-      <section class="section">
-        <div class="container"></div>
+          <div class="text-wrap">
+            <p class="text">Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
+            <p>Это отлично выражается в старом афоризме:
+            </p>
+            <p class="text">Первые 90% готового кода отнимают первые 90% времени разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.</p>
+          </div>
+        </div>
       </section>
+
+
+
+
+
     </main>
     <footer class="footer">
       <div class="container"></div>
