feat: implement step 11

--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,23 @@
 
     </main>
     <footer class="footer">
-      <div class="container"></div>
+      <div class="container">
+        <div class="footer-wrap">
+          <h3>Хотите узнать больше?<br>Подпишитесь на обновления</h3>
+          <div class="right-side">
+            <p class="text">Электронная почта</p>
+            <div class="input-wrap">
+              <input type="email" placeholder="Ваша электронная почта" class="email">
+              <button class="btn btn-footer"></button>
+            </div>
+            <p class="text">Подписываясь, вы принимаете <a href="#">правила сервиса</a></p>
+          </div>
+        </div>
+
+        <p class="footer-text">&copy; 2022 NadyaPod</p>
+        <p class="footer-text">По материалам статьи <a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b" class="link">Yash Ranadive Cognitive Biases in Programming</a></p>
+        <p class="footer-text"><a href="https://ru.hexlet.io/my" class="link" >Курсы программирования Hexlet</a></p>
+      </div>
     </footer>
   </div>
 </body>
