--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
         </div>
       </section>
 
-      <section class="section content" id="ikea-effect">
+      <section class="section content ikea-effect" id="ikea-effect">
         <div class="container">
           <div class="wrap">
             <img src="./images/1.png" alt="" class="shadow">
@@ -106,7 +106,7 @@
         </div>
       </section>
 
-      <section class="section content" id="premature-optimization">
+      <section class="section content premature-optimization" id="premature-optimization">
         <div class="container">
           <div class="wrap">
             <img src="./images/2.png" alt="" class="shadow">
@@ -126,7 +126,7 @@
         </div>
       </section>
 
-      <section class="section content" id="distortion-of-novelty">
+      <section class="section content distortion-of-novelty" id="distortion-of-novelty">
         <div class="container">
           <div class="wrap">
             <img src="./images/3.png" alt="" class="shadow">
@@ -146,7 +146,7 @@
         </div>
       </section>
 
-      <section class="section content" id="hyperbolic-depreciation">
+      <section class="section content hyperbolic-depreciation" id="hyperbolic-depreciation">
         <div class="container">
           <div class="wrap">
             <img src="./images/4.png" alt="" class="shadow">
@@ -166,7 +166,7 @@
         </div>
       </section>
 
-      <section class="section content" id="errors-in-planning">
+      <section class="section content errors-in-planning" id="errors-in-planning">
         <div class="container">
           <div class="wrap">
             <img src="./images/5.png" alt="" class="shadow">
@@ -187,11 +187,6 @@
           </div>
         </div>
       </section>
-
-
-
-
-
     </main>
     <footer class="footer">
       <div class="container">
