--- a/src/index.html
+++ b/src/index.html
@@ -63,20 +63,20 @@
               </a>
             </div>
             <div class="second-row">
-              <a href="#" class="card card-2">
+              <a href="#distortion-of-novelty" class="card card-2">
                 <span>3</span>
                 <h3>Искажение новизны</h3>
                 <p class="text">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более
                   старые.
                 </p>
               </a>
-              <a href="#" class="card card-2">
+              <a href="#hyperbolic-depreciation" class="card card-2">
                 <span>4</span>
                 <h3>Гиперболическое обесценивание</h3>
                 <p class="text">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но
                   доступную в будущем.</p>
               </a>
-              <a href="#" class="card card-2">
+              <a href="#errors-in-planning" class="card card-2">
                 <span>5</span>
                 <h3>Ошибка планирования</h3>
                 <p class="text">Неправильно рассчитывать время необходимое для завершения задачи.</p>
